--- a/src/App.css
+++ b/src/App.css
@@ -43,6 +43,23 @@
   font-size: 36px;
 }
 
+.SubHeading-Lato{
+  font-family: 'Lato';
+  font-size: 36px;
+}
+
+.SubSubHeading-Lato{
+  font-family: 'Lato';
+  font-size: 24px;
+}
+
+.P-Lato{
+  font-family: 'Lato';
+  font-size: 18px;
+  line-height: 20px;
+  text-align: left;
+}
+
 .NoScroll{
   overflow-x: hidden;
   overflow-y: hidden;
