--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 @import '~antd/dist/antd.css';
-@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@1,700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@1,500&display=swap');
 
 .App {
   text-align: center;
@@ -30,18 +30,18 @@
 }
 
 .App-greating{
-  font-family:'Lobster';
+  font-family:'Lora';
   font-size: 60px;
 }
 
 .Title{
-  font-family:'Lobster';
+  font-family:'Lora';
   font-size: 54px;
   
 }
 
 .SubHeading{
-  font-family:'Lobster';
+  font-family:'Lora';
   font-size: 32px;
 }
 
@@ -59,6 +59,7 @@
   font-family: 'Lato';
   font-size: 18px;
   line-height: 20px;
+  font-weight: normal;
   text-align: left;
 }
 
@@ -76,7 +77,7 @@
 }
 
 .App-link {
-  color: #61dafb;
+  color: #000000;
 }
 
 .scrollhost::-webkit-scrollbar {
