--- a/app/globals.css
+++ b/app/globals.css
@@ -8,6 +8,18 @@
   --about-me-accent-colour: #5ED3DA;
 }
 
+.projectComponent{
+  background-color: var(--project-accent-colour);
+}
+
+.artComponent{
+  background-color: var(--art-accent-colour);
+}
+
+.aboutMeComponent{
+  background-color: var(--about-me-accent-colour);
+}
+
 body {
   margin: 0px;
   padding: 0px;
@@ -26,6 +38,13 @@ body {
 .title{
   font-family:'Lora';
   font-size: 54px;
+  margin: 0
+}
+
+.sub-title{
+  font-family:'Lora';
+  font-size: 30px;
+  margin: 0
 }
 
 .P-Lato{
@@ -34,4 +53,8 @@ body {
   line-height: 20px;
   font-weight: normal;
   text-align: left;
+}
+
+.nav-back-button{
+  color: #000000;
 }
