--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@1,500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
 
 :root {
   --base-colour: #FAFAF0;
@@ -20,7 +21,7 @@
   background-color: var(--about-me-accent-colour);
 }
 
-body {
+.body {
   margin: 0px;
   padding: 0px;
 }
@@ -36,18 +37,21 @@ body {
 }
 
 .title{
-  font-family:'Lora';
+  color: #3E343C;
+  font-family:'Lobster';
   font-size: 54px;
   margin: 0
 }
 
 .sub-title{
+  color: #3E343C;
   font-family:'Lora';
   font-size: 30px;
   margin: 0
 }
 
 .P-Lato{
+    color: #3E343C;
   font-family: 'Lato';
   font-size: 18px;
   line-height: 20px;
@@ -57,4 +61,12 @@ body {
 
 .nav-back-button{
   color: #000000;
+}
+
+.Scroll-y{
+  overflow-y: auto;
+}
+
+.Text-left{
+  text-align: left;
 }
