--- a/app/globals.css
+++ b/app/globals.css
@@ -37,9 +37,7 @@
 }
 
 .mobileNav{
-  position: fixed;
-  bottom: 0;
-  right: 0
+  height: 100px;
 }
 
 .mobileNavButton{
@@ -48,7 +46,7 @@
 
 .title{
   color: var(--text-colour);
-  font-size: 60px;
+  font-size: 2.5vw;
   letter-spacing: 3px;
   margin: 0;
 }
