Update About Me page (#57)

--- a/app/globals.css
+++ b/app/globals.css
@@ -7,6 +7,7 @@
   --project-accent-colour: #FDBFD0;
   --art-accent-colour: #FDD77C;
   --about-me-accent-colour: #5ED3DA;
+  --about-me-accent-colour-light: #94E0E2;
   --text-colour: #3E343C;
 }
 
@@ -25,11 +26,12 @@
 .body {
   margin: 0px;
   padding: 0px;
+  background-color: var(--base-colour);
 }
 
 .main {
   text-align: center;
-  background-color: var(--base-colour);
+  height: "100vh";
 }
 
 .fullRow{
@@ -100,6 +102,7 @@
   font-family: 'Lato';
   font-size: 16px;
   font-weight: normal;
+  text-align: left;
 }
 
 .small-sub-title {
@@ -107,6 +110,7 @@
   font-family: 'Lato';
   font-size: 14px;
   font-weight: normal;
+  text-align: left;
 }
 
 .about-me-button {
@@ -123,6 +127,11 @@
   font-weight: 400;
   font-size: 16px;
 }
+
+.work-porject-card {
+  background-color: var(--about-me-accent-colour-light);
+}
+
 
 .about-me-button:hover{
   color: var(--base-colour);
