--- a/app/styles/pillar.module.css
+++ b/app/styles/pillar.module.css
@@ -1,7 +1,13 @@
 .fullCard{
-    height: "100vh";
+    height: 100vh;
+    display: flex;
+    justify-content: center;
 }
 
-.fullCardTitle{
-    padding-top: "40vh";
+.title {
+    align-self: center;
+    color: var(--text-colour);
+    font-size: 2.5vw;
+    letter-spacing: 3px;
+    margin-bottom: 250px;
 }
