--- a/app/styles/greeting.module.css
+++ b/app/styles/greeting.module.css
@@ -1,13 +1,16 @@
-.imageContainer {
+.greetingContainer {
     display: flex;
     justify-content: center;
     margin: 250px 0 auto;
+    max-width: 40%;
 }
 
 .image {
+    display: block;
     height: 250px;
     width: 250px;
     border-radius: 50%;
+    margin: 0 auto;
 }
 
 .title {
@@ -15,6 +18,7 @@
     font-size: 35px;
     letter-spacing: 3px;
     margin: 0; /*Override shadcn margin*/
+    text-align: center;
 }
 
 .description {
@@ -54,14 +58,14 @@
 
 /* Mobile styling */
 @media screen and (max-width: 600px){
-    .imageContainer {
+    .greetingContainer {
         margin: 0;
     }
 }
 
 /* Low height styling */
 @media screen and (max-height: 800px) {
-    .imageContainer {
+    .greetingContainer {
         margin-top: 15vh;
     }
 }
