--- a/app/styles/greeting.module.css
+++ b/app/styles/greeting.module.css
@@ -1,7 +1,11 @@
+.loader {
+    flex-grow: 1;
+}
+
 .greetingContainer {
     display: flex;
     justify-content: center;
-    margin: 250px 0 auto;
+    margin: 25vh 0 auto;
     flex-grow: 1;
 }
 
@@ -57,15 +61,10 @@
 }
 
 /* Mobile styling */
-@media screen and (max-width: 600px){
+@media screen and (max-width: 1200px){
     .greetingContainer {
-        margin: 0;
-    }
-}
-
-/* Low height styling */
-@media screen and (max-height: 800px) {
-    .greetingContainer {
-        margin-top: 15vh;
+        margin-bottom: 50px;
+        bottom: 0;
+        margin-top: 10vh;
     }
 }
