--- a/app/styles/pillar.module.css
+++ b/app/styles/pillar.module.css
@@ -7,11 +7,23 @@
 .title {
     align-self: center;
     color: var(--text-colour);
-    font-size: 2.5vw;
+    font-size: 45px;
     letter-spacing: 3px;
-    margin-bottom: 250px;
+    text-align: center;
 }
 
 .link {
     text-decoration: none;
 }
+
+@media screen and (max-width: 1200px) {
+    .fullCard {
+        height: 100px;
+        width: 100%;
+    }
+
+    .title{
+        margin: 0;
+        justify-self: center;
+    }
+  }
