--- a/app/styles/about_me_projects.module.css
+++ b/app/styles/about_me_projects.module.css
@@ -5,21 +5,37 @@
     font-weight: normal;
     text-align: left;
     margin: 0 0 5px; /*Override h4 margin*/
-  }
+}
 
 .projectsContainer {
     display: flex;
+    justify-content: center;
+    padding: 0 25px;
+    flex-wrap: wrap;
+    gap: 16px
 }
 
 .project {
-    margin: 0 4px;
+    padding-bottom: 5px;
+    margin: 0;
+    background-color: var(--about-me-accent-colour-light);
+    border-radius: 0 0 10px 10px;
+}
+
+.projectImage {
+    margin: 0;
 }
 
 .projectTitle {
-    margin: 0;
+    margin: 0 0 0 10px;
     color: var(--text-colour);
     font-family: 'Lato';
     font-size: 16px;
-    font-weight: normal;
+    font-weight: 600;
     text-align: left;
+    text-justify: center;
+}
+
+.projectLink {
+    text-decoration: none;
 }
