--- a/app/globals.css
+++ b/app/globals.css
@@ -2,8 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400&display=swap');
-
 @layer base {
   :root {
     --base-colour: #FAFAF0;
@@ -95,7 +93,7 @@
 .sub-title{
   color: var(--text-colour);
   font-size: 30px;
-  font-family: 'Lato';
+  font-family: Lato;
   font-weight: bold;
   margin: 0;
 }
