--- a/app/styles/about_me_page.module.css
+++ b/app/styles/about_me_page.module.css
@@ -1,7 +1,7 @@
 .employer {
     margin: 0 auto;
     color: var(--text-colour);
-    font-family: 'Lato';
+    font-family: var(--font-lato);
     font-size: 24px;
     font-weight: bold;
 }
