--- a/app/styles/about_me_roles.module.css
+++ b/app/styles/about_me_roles.module.css
@@ -17,7 +17,7 @@
 
 .jobTitle {
     color: var(--text-colour);
-    font-family: 'Lato';
+    font-family: var(--font-lato);
     font-size: 18px;
     font-weight: bold;
     text-align: left;
@@ -26,7 +26,7 @@
 
 .jobWorkPeriod {
     color: var(--text-colour);
-    font-family: 'Lato';
+    font-family: var(--font-lato);
     font-size: 14px;
     font-weight: normal;
     text-align: left;
@@ -40,7 +40,7 @@
 
 .jobAchievement {
     color: var(--text-colour);
-    font-family: 'Lato';
+    font-family: var(--font-lato);
     font-size: 16px;
     text-align: left;
     margin: 0 0 8px;
