--- a/app/styles/art_page.module.css
+++ b/app/styles/art_page.module.css
@@ -3,10 +3,7 @@
     width: 1300px;
     flex-wrap: wrap;
     margin: 50px auto 0;
-}
-
-.artPiece {
-    margin: 0 16px;
+    gap: 32px;
 }
 
 .image {
@@ -23,25 +20,25 @@
 /* smaller screens styles */
 @media screen and (max-width: 1300px){
     .artContainer {
-        max-width: 700px;
+        max-width: 964px;
     }
 
     .image {
-        width: 200px;
-        height: 200px;
+        width: 300px;
+        height: 300px;
     }
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 980px) {
     .artContainer {
-        max-width: 464px;
+        max-width: 632px;
     }
     
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 632px) {
     .artContainer {
-        max-width: 232px;
+        max-width: 300px;
     }
     
 }
