--- a/app/styles/projects_page.module.css
+++ b/app/styles/projects_page.module.css
@@ -1,7 +1,7 @@
 .projectsContainer {
     display: flex;
-    width: 1100px;
-    flex-wrap: wrap;
+    max-width: 1300px;
+    justify-content: center;
     margin: 50px auto 0;
 }
 
@@ -12,6 +12,18 @@
 
 /* smaller screens styles */
 @media screen and (max-width: 1300px){
+    .projectsContainer{
+        max-width: 600px;
+    }
+
+    .image {
+        width: 500px;
+        height: 500px;
+    }
+}
+
+@media screen and (max-width: 700px) {
+
     .image {
         width: 300px;
         height: 300px;
