--- a/app/styles/bullets.module.css
+++ b/app/styles/bullets.module.css
@@ -1,5 +1,5 @@
 .container {
-    margin-top: 50px;
+    margin-top: 25px;
 }
 
 .title {
@@ -12,4 +12,5 @@
     font-size: 18px;
     line-height: 20px;
     font-weight: normal;
+    padding-left: 20px;
 }
