--- a/app/styles/project_page_body.module.css
+++ b/app/styles/project_page_body.module.css
@@ -1,11 +1,13 @@
 .container {
-    height: 600px;
-    width: 1200px;
     margin: 25px auto;
+    max-width: 1400px;
 }
 
 @media screen and (max-width: 700px) {
+
     .container {
-        width: 100%;
+        margin: 25px auto;
+        max-width: 90%;
     }
+
 }
