--- a/app/styles/project_page_git_repo.module.css
+++ b/app/styles/project_page_git_repo.module.css
@@ -21,3 +21,29 @@
     margin: 0 0 0 25px;
     overflow: scroll;
 }
+
+@media screen and (max-width: 700px) {
+    .container {
+        margin: 0 auto;
+        width: 100%;
+    }
+
+    .repoContainer {
+        flex-direction: column;
+        height: 700px;
+    }
+
+    .docTree {
+        width: 100%;
+        border-bottom: 2px solid #3E343C;
+        border-right: 0;
+        height: 200px;
+        overflow: scroll;
+    }
+
+    .codeDoc {
+        width: 90%;
+        margin: 0 0 0 10px;
+        height: 500px;
+    }
+}
