--- a/app/styles/project_page_hero.module.css
+++ b/app/styles/project_page_hero.module.css
@@ -1,6 +1,6 @@
 .heroContainter {
     max-width: 600px;
-    margin: 100px auto;
+    margin: 50px auto 25px;
 }
 
 .title {
@@ -9,6 +9,7 @@
 
 @media screen and (max-width: 700px) {
     .heroContainter {
-        margin: 100px 50px;
+        margin: 25px auto;
+        width: 90%;
     }
 }
