--- a/app/styles/title.module.css
+++ b/app/styles/title.module.css
@@ -1,7 +1,7 @@
 .titleContainer {
     color: var(--text-colour);
     display: flex;
-    height: 75px;
+    min-height: 75px;
     justify-content: center;
 }
 
@@ -28,13 +28,19 @@
 }
 
 /* Mobile styling */
-@media screen and (max-width: 500px){
+@media screen and (max-width: 700px){
+    .titleContainer {
+        flex-direction: column;
+    }
+
     .title {
-        font-size: 44px;
-        padding-right: 10px;
+        padding-right: 0;
+        font-size: 34px;
+        line-height: 75px;
     }
 
     .backButton{
         font-size: 28px;
+        line-height: 35px;
     }
 }
