--- a/app/styles/project_page_git_repo.module.css
+++ b/app/styles/project_page_git_repo.module.css
@@ -1,6 +1,6 @@
 .container {
     margin: 50px auto;
-    width: 1300px;
+    max-width: 1300px;
 }
 
 .repoContainer {
@@ -16,10 +16,17 @@
 }
 
 .codeDoc {
-    width: 1100px;
+    max-width: 1100px;
     text-align: start;
     margin: 0 0 0 25px;
     overflow: scroll;
+}
+
+.githubLink {
+    color: var(--text-colour);
+    font-size: 15px;
+    font-weight: bold;
+    text-decoration: underline;
 }
 
 @media screen and (max-width: 700px) {
@@ -29,21 +36,12 @@
     }
 
     .repoContainer {
-        flex-direction: column;
-        height: 700px;
+        display: none;
     }
 
-    .docTree {
-        width: 100%;
-        border-bottom: 2px solid #3E343C;
-        border-right: 0;
-        height: 200px;
-        overflow: scroll;
-    }
-
-    .codeDoc {
-        width: 90%;
-        margin: 0 0 0 10px;
-        height: 500px;
+    .githubLink {
+        display: block;
+        font-size: 26px;
+        text-align: center;
     }
 }
