Update background image styling

--- a/app/styles/project_page.module.css
+++ b/app/styles/project_page.module.css
@@ -19,7 +19,9 @@
         max-width: 700px;
         justify-content: center;
     }
+}
 
+@media screen and (max-width: 1250px) {
     .backgroundImage {
         display: none;
     }
