--- a/app/styles/project_page_git_repo.module.css
+++ b/app/styles/project_page_git_repo.module.css
@@ -16,7 +16,7 @@
 }
 
 .codeDoc {
-    max-width: 1100px;
+    width: 1100px;
     text-align: start;
     margin: 0 0 0 25px;
     overflow: scroll;
