--- a/app/styles/projects_page.module.css
+++ b/app/styles/projects_page.module.css
@@ -16,15 +16,22 @@
 @media screen and (max-width: 1300px){
     .projectsContainer {
         max-width: 600px;
+        padding-left: 15px;
     }
 
     .image {
-        width: 488px;
-        height: 268px;
+        width: 600px;
+        height: auto;
     }
 }
 
 @media screen and (max-width: 700px) {
+
+    .projectsContainer {
+        padding-left: 0;
+        width: 300px;
+    }
+
 
     .image {
         width: 300px;
