Update project colour

--- a/app/globals.css
+++ b/app/globals.css
@@ -5,7 +5,7 @@
 @layer base {
   :root {
     --base-colour: #FAFAF0;
-    --project-accent-colour: #FDBFD0;
+    --project-accent-colour: #F98BA9;
     --art-accent-colour: #FDD77C;
     --about-me-accent-colour: #5ED3DA;
     --about-me-accent-colour-light: #94E0E2;
