Remove antd from project page (#66)

--- a/app/globals.css
+++ b/app/globals.css
@@ -5,7 +5,7 @@
 @layer base {
   :root {
     --base-colour: #FAFAF0;
-    --project-accent-colour: #FDBFD0;
+    --project-accent-colour: #F98BA9;
     --art-accent-colour: #FDD77C;
     --about-me-accent-colour: #5ED3DA;
     --about-me-accent-colour-light: #94E0E2;
@@ -64,6 +64,8 @@
   margin: 0px;
   padding: 0px;
   background-color: var(--base-colour);
+  font-family: var(--font-lato);
+  color: var(--text-colour);
 }
 
 .main {
@@ -103,6 +105,15 @@
   font-family: var(--font-lato);
   font-weight: bold;
   margin: 0;
+}
+
+p {
+  color: var(--text-colour);
+  margin: 0;
+  font-size: 18px;
+  line-height: 20px;
+  font-weight: normal;
+  text-align: left;
 }
 
 .P-Lato{
