--- a/app/styles/projects_page.module.css
+++ b/app/styles/projects_page.module.css
@@ -1,28 +1,37 @@
 .projectsContainer {
     display: flex;
+    flex-direction: column;
     max-width: 1300px;
     justify-content: center;
     margin: 50px auto 0;
+    padding-left: 100px;
 }
 
 .image {
-    width: 1220px;
-    height: 670px;
+    width: 1217px;
+    height: auto;
 }
 
 /* smaller screens styles */
 @media screen and (max-width: 1300px){
-    .projectsContainer{
+    .projectsContainer {
         max-width: 600px;
+        padding-left: 15px;
     }
 
     .image {
-        width: 488px;
-        height: 268px;
+        width: 600px;
+        height: auto;
     }
 }
 
 @media screen and (max-width: 700px) {
+
+    .projectsContainer {
+        padding-left: 0;
+        width: 300px;
+    }
+
 
     .image {
         width: 300px;
