--- a/app/styles/title.module.css
+++ b/app/styles/title.module.css
@@ -1,7 +1,7 @@
 .titleContainer {
     color: var(--text-colour);
     display: flex;
-    height: 75px;
+    min-height: 75px;
     justify-content: center;
 }
 
@@ -28,52 +28,19 @@
 }
 
 /* Mobile styling */
-@media screen and (max-width: 500px){
+@media screen and (max-width: 700px){
+    .titleContainer {
+        flex-direction: column;
+    }
+
     .title {
         font-size: 48px;
-        padding-right: 10px;
+        line-height: 45px;
+        padding: 0 0 10px 0;
     }
 
     .backButton{
         font-size: 28px;
-    }
-}.titleContainer {
-    color: var(--text-colour);
-    display: flex;
-    height: 75px;
-    justify-content: center;
-}
-
-.title {
-    font-size: 54px;
-    letter-spacing: 3px;
-    line-height: 75px;
-    text-align: center;
-    flex-grow: 0.7;
-    padding-right: 50px;
-
-}
-
-.backButton {
-    width: 100px;
-    font-size: 35px;
-    line-height: 75px;
-    text-align: center;
-    color: var(--text-colour);
-}
-
-.BackButtonLink{
-    text-decoration: none;
-}
-
-/* Mobile styling */
-@media screen and (max-width: 500px){
-    .title {
-        font-size: 44px;
-        padding-right: 10px;
-    }
-
-    .backButton{
-        font-size: 28px;
+        line-height: 35px;
     }
 }
