--- a/app/styles/greeting.module.css
+++ b/app/styles/greeting.module.css
@@ -1,15 +1,63 @@
-.test{
-    height: "100vh"; 
+.loader {
+    flex-grow: 1;
 }
 
-.greeting{
-    background-color: var(--base-colour);
+.greetingContainer {
+    display: flex;
+    justify-content: center;
+    margin: auto;
+    height: 490px;
+    padding-top: 30px;
 }
 
-.greetingDescription{
-    margin-top: "-70px";
+.image {
+    display: block;
+    height: 250px;
+    width: 250px;
+    border-radius: 50%;
+    margin: 0 auto;
 }
 
-.greetingLink {
-    color: #000000;
-  }
+.title {
+    color: var(--text-colour);
+    font-size: 35px;
+    letter-spacing: 3px;
+    margin: 0 0 5px; /*Override shadcn margin*/
+    text-align: center;
+}
+
+.description {
+    color: var(--text-colour);
+    font-family: var(--font-lato);
+    font-size: 18px;
+    line-height: 20px;
+    font-weight: normal;
+    text-align: left;
+    max-width: 500px;
+    padding: 0 20px;
+}
+
+.iconContainer{
+    display: flex;
+    justify-content: center;
+    margin: 5px 0 10px;
+}
+
+.icon {
+    width: 32px;
+    height: 32px;
+    transform: scale(0.75);
+    color: var(--text-colour);
+}
+
+.github {
+    background-image: url("../assets/github.png");
+}
+
+.linkedIn {
+    background-image: url("../assets/linkedin.png");
+}
+
+.instagram {
+    background-image: url("../assets/instagram.png");
+}
